--- a/Demo/Views/Meeting/Index.cshtml
+++ b/Demo/Views/Meeting/Index.cshtml
@@ -14,6 +14,22 @@
         padding-left: 0px;
         padding-right: 0px;
     }
+    .panel-success {
+        border-color:#1F2D3D;
+    }
+    .nstSlider {
+        background: #C0CCDA;
+    }
+
+    .nstSlider .highlightPanel {
+        background: #20A0FF;
+    }
+
+    .panel-success > .panel-heading {
+        color:#1F2D3D;
+        background-color: #F9FAFC;
+        border-color: #D3DCE6;
+    }
 </style>
 
 
@@ -63,7 +79,7 @@
 
                     </div>
                     <div class="col-lg-8" style="text-align:right">
-                        <span @@click="onMetclick(index)" class="glyphicon glyphicon-plus" style="cursor:pointer;font-size:18px;"></span>
+                        <span @@click="onMetclick(index)" class="glyphicon glyphicon-plus" style="cursor:pointer;font-size:18px;">新增</span>
                     </div>
                 </div>
 
