--- a/Demo/Views/Shared/_Layout.cshtml
+++ b/Demo/Views/Shared/_Layout.cshtml
@@ -6,7 +6,7 @@
     <title>@ViewBag.Title － 会议申请系统</title>
 
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <link rel="shortcut icon" href="~/assets/img/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="~/assets/img/logo.png" type="image/x-icon">
 
     <!--Basic Styles-->
     <link href="~/assets/css/bootstrap.min.css" rel="stylesheet" />
@@ -64,12 +64,12 @@
         <!-- Page Container -->
         <div class="page-container">
             <!-- Page Sidebar -->
-            <div class="page-sidebar" id="sidebar">
+            @*<div class="page-sidebar" id="sidebar">
                 @Html.Partial("_Menu")
-            </div>
+            </div>*@
             <!-- /Page Sidebar -->
             <!-- Page Content -->
-            <div class="page-content">
+            <div class="page-content" style="margin-left: 0px">
                 <!-- Page Header -->
                 <div class="page-header position-relative">
                     <div class="header-title">
